--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
 
                     <h3 class="footer_header" style="padding-right: 0px">
                     <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="img/SAMH_Logo_bis.png" width="94" height="94" margin-right="2px">
+                    <img alt="Brand" src="img/SAMH_Logo1.png" width="94" height="94" margin-right="2px">
                     <a class="navbar-brand" href="#">
                     <img alt="Brand" src="img/Logomnhn.png" width="94" height="94" margin-right="2px">
                     </a>
