--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
 
             For the backgrounds, you can combine from the bgs folder :D
         -->
-        <article class="slide" id="showcasing" style="background: url('img/backgrounds/Slider_1_bis_bis_bis.jpg') repeat-x top center;">
+        <article class="slide" id="showcasing" style="background: url('img/backgrounds/Slider_1_bis.jpg') repeat-x top center;">
             <div class="info">""
                 <h2></h2
             </div>
         </article>
-        <article class="slide" id="ideas" style="background: url('img/backgrounds/pic50.jpeg') repeat-x top center;">
+        <article class="slide" id="ideas" style="background: url('img/backgrounds/slider_2_bis.jpg') repeat-x top center;">
             <div class="info">
             </div>
         </article>
-        <article class="slide" id="tour" style="background: url('img/backgrounds/pic52.jpg') repeat-x top center;">
+        <article class="slide" id="tour" style="background: url('img/backgrounds/slider_3_bis.jpg') repeat-x top center;">
             <div class="info">
                 <h2>Réouverture du Musée prévue le </h2>
                 <a href="features.html">17 Octobre 2015 </a>
@@ -59,11 +59,6 @@
 <div class="navbar navbar-inverse navbar marigin-bottom" role="navigation">
         <div class="container">
                 <div class="container-fluid">
-    <!--><div class="navbar-header">
-      <a class="navbar-brand" href="#">
-         <img alt="SAMH" src="img/SAMH_Logo_bis.png" width="32" height="32" >
-      </a>
-    </div> <!-->
   </div>
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle pull-right" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -186,7 +181,7 @@ Présidée notamment par Charles de Noailles, Alix de Rothschild, Marie-Alice de
 
                     <h3 class="footer_header" style="padding-right: 0px">
                     <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="img/SAMH_Logo1.png" width="94" height="94" margin-right="2px">
+                    <img alt="Brand" src="img/SAMH_Logo_bis.png" width="94" height="94" margin-right="2px">
                     <a class="navbar-brand" href="#">
                     <img alt="Brand" src="img/Logomnhn.png" width="94" height="94" margin-right="2px">
                     </a>
